# libreda-db

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md
.reuse/: dep5
src/: chip.rs  delegate.rs  flat_view.rs  flyweight.rs  fused_layout_netlist.rs  hierarchy_utils.rs  index.rs  index_map.rs  lib.rs  library.rs  prelude.rs  profile.rs  property_storage.rs  rc_string.rs  ref_wrapper.rs  reference_access.rs  refset.rs  region_search.rs  slab_alloc.rs  traits.rs  undo.rs
src/decorator/: hierarchy.rs  l2n.rs  layout.rs  mod.rs  netlist.rs
src/delegation/: hierarchy.rs  mod.rs
src/hierarchy/: mod.rs  prelude.rs  traits.rs  util.rs
src/l2n/: mod.rs  util.rs
src/layout/: algorithms.rs  cell.rs  cell_instance.rs  errors.rs  hashmap_layout.rs  index.rs  io.rs  layer.rs  layout.rs  mod.rs  prelude.rs  repetition.rs  shape_collection.rs  traits.rs  types.rs  util.rs
src/netlist/: arc_id.rs  circuit.rs  circuit_instance.rs  direction.rs  hashmap_netlist.rs  io.rs  mod.rs  net.rs  netlist.rs  pin.rs  pin_instance.rs  port.rs  prelude.rs  terminal_id.rs  terminal_ref.rs  traits.rs  util.rs
src/netlist/rc_netlist/: circuit.rs  circuit_instance.rs  mod.rs  net.rs  pin.rs  pin_instance.rs  port.rs  prelude.rs  rc_netlist.rs  terminal_ref.rs
src/reference_access/: hierarchy_reference_access.rs  l2n_reference_access.rs  layout_reference_access.rs  mod.rs  netlist_reference_access.rs
src/rw_reference_access/: hierarchy_reference_access.rs  mod.rs
src/technology/: layerstack.rs  mod.rs  prelude.rs  rules.rs
tests/: auto_traits.rs  chip.rs  circuit.rs  hierarchy_utils.rs  layout_properties.rs  test.rs
