[package]
name = "libreda-db"
version = "0.0.4"
authors = ["Thomas Kramer <code@tkramer.ch>"]
edition = "2018"
license = "AGPL-3.0"
description = "Layout and netlist datastructures for chip design."
keywords = ["vlsi"]
readme = "README.md"
homepage = "https://libreda.org"
repository = "https://codeberg.org/libreda/libreda-db"

[lib]
[dependencies]
log = "0.4"
itertools = "0.10.0"
num-traits = "0.2"
genawaiter = { version = "0.99.1", default-features = false }
iron-shapes = { version = "0.0.5", path = "../iron-shapes" }
serde = { version = "1", optional = true, features = ["derive"] }
fnv = "1.0.7" # Fast hashing for small keys.