[package]
name = "libreda-db"
version = "0.0.7"
authors = ["Thomas Kramer <code@tkramer.ch>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Layout and netlist datastructures for chip design."
keywords = ["vlsi"]
readme = "README.md"
homepage = "https://libreda.org"
repository = "https://codeberg.org/libreda/libreda-db"

[lib]
[dependencies]
log = "0.4"
itertools = "0.10.0"
num-traits = "0.2"
iron-shapes = { version = "0.0.6", path = "../iron-shapes", features = ["serde"] }
iron-shapes-booleanop = { path = '../iron-shapes-booleanop' }
serde = { version = "1", optional = true, features = ["derive", "rc"] }
fnv = "1.0.7" # Fast hashing for small keys.
